2010-09-23  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Cmdline.pod perl/Amanda/Cmdline.swg: update POD, add
	  exports
	* server-src/amreport.pl: don't print anything in script mode when
	  there is nothing to do
	* perl/Amanda/Report.pm: handle ERROR and FATAL from amvault
	* server-src/amvault.pl: make dst-changer and src-timestamp into
	  --options and add support for dumpspecs
	* man/xml-source/amvault.8.xml: document
	* installcheck/amvault.pl: test changes
	* installcheck/Amanda_Cmdline.pl: remove TODO

2010-09-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (startaflush_tape): Use tape_length if the
	  tape is not started.

2010-09-22  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xslt/html.xsl.in: include Amanda version in HTML footers

2010-09-22  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amvault.pl: add an INFO line for every source volume read

2010-09-22  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amvault.pl: add extra logging for amreport, and invoke
	  amreport at the end of a run
	* perl/Amanda/Logfile.swg server-src/logfile.c server-src/logfile.h:
	  add P_AMVAULT
	* perl/Amanda/Report.pm perl/Amanda/Report/human.pm
	  server-src/amreport.pl: handle amvault logs, too

2010-09-21  Orion Poplawski <orion@cora.nwra.com>
	* server-src/amoverview.pl: fix remaining uninitialized value warnings

2010-09-21  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/DB/Catalog.pm: add a status even for dumps with no
	  successful parts on tape; comments and POD

2010-09-21  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/catalogs/amflush.cat
	  installcheck/catalogs/bigestimate.cat
	  installcheck/catalogs/doublefailure.cat
	  installcheck/catalogs/fatal.cat
	  installcheck/catalogs/filesystemstaped.cat
	  installcheck/catalogs/flush-noorigsize.cat
	  installcheck/catalogs/flush-origsize.cat
	  installcheck/catalogs/longstrange.cat