@@ -1,4 +1,7 @@
 2010-09-23  Dustin J. Mitchell <dustin@zmanda.com>
+	* installcheck/amreport.pl: update checks to match amreport change
+
+2010-09-23  Dustin J. Mitchell <dustin@zmanda.com>
 	* perl/Amanda/Cmdline.pod perl/Amanda/Cmdline.swg: update POD, add
 	  exports
 	* server-src/amreport.pl: don't print anything in script mode when
